--- a/外国.md
+++ b/外国.md
@@ -1,5 +1,5 @@
 
-# 外国的大团队
+# 暂时未开始写
 外国的就只写一个主团队就可以了,不用找其他的副团队了
 ## google(谷歌)
 ## facebook(脸书)
@@ -8,6 +8,5 @@
 ## airbnb(爱彼迎)
 ## apache(ASF)
 ## Amazon(亚马逊)
-## Eclipse()
 ## Ethereum(以太坊)
 https://github.com/Samsung
