--- a/外国.md
+++ b/外国.md
@@ -6,7 +6,7 @@
 ## Microsoft(微软)
 ## square(美国软件公司)
 ## airbnb(爱彼迎)
-## apache(ASF)
+## apache(阿帕奇)
 ## Amazon(亚马逊)
 ## Ethereum(以太坊)
 https://github.com/Samsung
