--- a/外国.md
+++ b/外国.md
@@ -1,9 +1,9 @@
 
 # 暂时未开始写
 外国的就只写一个主团队就可以了,不用找其他的副团队了
-## google(谷歌)
-## facebook(脸书)
-## Microsoft(微软)
+## google (谷歌)
+## facebook (脸书)
+## Microsoft (微软)
 https://github.com/Microsoft  
 https://github.com/dotnet  
 https://github.com/aspnet  
@@ -22,9 +22,10 @@ https://github.com/MicrosoftEdge
 https://github.com/microsoftgraph  
 
 
-## square(美国软件公司)
-## airbnb(爱彼迎)
-## apache(阿帕奇)
-## Amazon(亚马逊)
-## Ethereum(以太坊)
+## square (美国软件公司)
+## Twitter（推特）
+## airbnb (爱彼迎)
+## apache (阿帕奇)
+## Amazon (亚马逊)
+## Ethereum (以太坊)
 https://github.com/Samsung
